package routing

import (
    "context"
    "errors"
    pb "github.com/yourusername/routify/proto"
)

// PlanRoute simulates a Dijkstra/A* route planning engine
func PlanRoute(req *pb.RouteRequest) (*pb.RouteResponse, error) {
    if req.Origin == "" || req.Destination == "" {
        return nil, errors.New("origin and destination must be provided")
    }

    // TODO: Implement real graph traversal logic here
    steps := []string{
        "Start at " + req.Origin,
        "Walk to Transit Stop A",
        "Take Bus 42",
        "Transfer at Hub X",
        "Take Metro Line 2",
        "Arrive at " + req.Destination,
    }

    return &pb.RouteResponse{
        Steps:     steps,
        Total_time: 18.5, // mock total trip time in minutes
    }, nil
}
